[gd_scene load_steps=3 format=3 uid="uid://c8y6d7ysl5nk2"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_f0puq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl4k8"]
bg_color = Color(0.301961, 0.301961, 0.301961, 0.819608)

[node name="Menu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xl4k8")
script = ExtResource("1_f0puq")

[node name="MaginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginMedium"

[node name="BoxContainer" type="VBoxContainer" parent="MaginContainer"]
custom_minimum_size = Vector2(520, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="MaginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
text = "Metal Skirmish"

[node name="HSeparator" type="HSeparator" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer1" type="MarginContainer" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="StartButton" type="Button" parent="MaginContainer/BoxContainer/MarginContainer1"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="ResumeButton" type="Button" parent="MaginContainer/BoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Resume"

[node name="MarginContainer3" type="MarginContainer" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="RestartButton" type="Button" parent="MaginContainer/BoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Restart Round"

[node name="MarginContainer4" type="MarginContainer" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="QuitButton" type="Button" parent="MaginContainer/BoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="MarginContainer5" type="MarginContainer" parent="MaginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="GridContainer" type="VBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5"]
layout_mode = 2

[node name="MouseSensitivity" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Mouse sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/MouseSensitivity"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.001

[node name="SoundVolume" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/SoundVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Sound volume"

[node name="SoundVolumeSlider" type="HSlider" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/SoundVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.001

[node name="MusicVolume" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Music	 volume"

[node name="MusicVolumeSlider" type="HSlider" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/MusicVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.001

[node name="InvertMouse" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/InvertMouse"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Invert mouse"

[node name="InvertMouseOptionButton" type="OptionButton" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/InvertMouse"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
item_count = 2
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 6
popup/item_1/text = "Enabled"
popup/item_1/id = 7

[node name="Vsync" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Vsync"

[node name="VsyncOptionButton" type="OptionButton" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/Vsync"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="PerformancePreset" type="HBoxContainer" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/PerformancePreset"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BodySmall"
text = "Graphics	"

[node name="PerformancePresetOptionButton" type="OptionButton" parent="MaginContainer/BoxContainer/MarginContainer5/GridContainer/PerformancePreset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
item_count = 1
selected = 0
popup/item_0/text = "Placeholder"
popup/item_0/id = 0
